operator/test/chainsaw/cnpg-backend/backup-policy-health-visible/assert/backup-policy-failed.yaml
apiVersion: tamoss.livewyer.io/v1alpha1
kind: Tamoss
metadata:
  name: tamoss
(status.conditions[?type == 'BackupPolicyReady'] | [0].status): "False"
(status.conditions[?type == 'BackupPolicyReady'] | [0].reason): BackupPolicyFailed
