operator/test/chainsaw/cnpg-backend/backup-policy-health-visible/assert/backup-policy-healthy.yaml
apiVersion: tamoss.livewyer.io/v1alpha1
kind: Tamoss
metadata:
  name: tamoss
(status.conditions[?type == 'BackupPolicyReady'] | [0].status): "True"
(status.conditions[?type == 'BackupPolicyReady'] | [0].reason): BackupPolicyHealthy
