operator/test/chainsaw/cnpg-backend/backup-policy-health-visible/assert/cnpg-crds-established.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: clusters.postgresql.cnpg.io
(status.conditions[?type == 'Established'] | [0].status): "True"
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: scheduledbackups.postgresql.cnpg.io
(status.conditions[?type == 'Established'] | [0].status): "True"
